   * Options window has a detailed description for each setting
   * Process window has descriptions for each field
   * File processing (signature verification, checks for packed images) is now 
     asynchronous. This means that there are no more delays when starting 
     certain programs.
   * Slightly different notification icon
   * GDI and USER handle counts
 * FIXED:
   * Disables "Show one graph per CPU" if there is only one CPU
   * Process tree weirdness for users with limited privileges
   * "Require signatures for" names are now forced to be lower-case
   * "Hide handles with no name" is now unique to each process window - 
     changing it in one window does not affect others
   * Dialog/input boxes are now more consistent
   * Very old bug where the refresh interval isn't applied at startup
   * Displays-2-more-processes-than-actual-number bug
   * System Information screwing up when the user tries to open it when it's 
     already open
   * Workaround for Bug #2553406 - "COMException: Class not registered"
   * "a hour" -> "an hour", "yesterday ago" -> "a day ago"
   * Handle leaks in the thread window, handle list and process updater

1.3.2.0
 * NEW:
   * Network tab - shows current network connections
   * KProcessHacker - an experimental kernel-mode driver for Process Hacker which 
     finally enables Process Hacker to display all file handles without freezing
   * Can protect and unprotect processes (Vista's DRM protection)
   * System Information menu item in the tray icon menu
   * Hide when minimized option
   * Now resolves device names into drive letters - e.g. "\Device\Harddisk1\FileName" into 
     "C:\FileName".
   * Properly verifies system components instead of just checking file permissions
   * Configurable dangerous-process-names highlighting
   * Added protection against PEB file name spoofing
   * Customizable fonts
   * Command line switch: -m to hide Process Hacker