@@ -57,6 +57,7 @@ typedef struct _SYSTEM_HANDLE_INFORMATION
 #define KPH_OPENPROCESSTOKEN KPH_CTL_CODE(12)
 #define KPH_SUSPENDPROCESS KPH_CTL_CODE(13)
 #define KPH_RESUMEPROCESS KPH_CTL_CODE(14)
+#define KPH_TERMINATEPROCESS KPH_CTL_CODE(15)
 
 NTSTATUS KPHCreate(PDEVICE_OBJECT DeviceObject, PIRP Irp);
 NTSTATUS KPHClose(PDEVICE_OBJECT DeviceObject, PIRP Irp);
